# d2r-autopilot

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
config/builds/: paladin_hammerdin.yaml  sorceress_blizzard.yaml
src/d2r_autopilot/: __init__.py  __main__.py  bot.py  config.py
src/d2r_autopilot/combat/: __init__.py  engine.py  targeting.py
src/d2r_autopilot/game/: __init__.py  health.py  inventory.py  map_reader.py  skills.py  state.py
src/d2r_autopilot/input/: __init__.py  keyboard.py  mouse.py
src/d2r_autopilot/loot/: __init__.py  filter.py  picker.py
src/d2r_autopilot/navigation/: __init__.py  pathfinder.py  town.py
src/d2r_autopilot/routines/: __init__.py  baal.py  base.py  chaos.py  mephisto.py
src/d2r_autopilot/screen/: __init__.py  capture.py  detector.py  ocr.py
