[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d2r-autopilot"
version = "0.1.0"
description = "Diablo 2 Resurrected automatic player bot"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "mss>=9.0.0",
    "pyautogui>=0.9.54",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pytesseract>=0.3.10",
    "keyboard>=0.13.5",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0",
]

[project.scripts]
d2r-autopilot = "d2r_autopilot.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
